Updated intro to chapter6

--- a/docs/bookdown-RNA-seq-protocol.tex
+++ b/docs/bookdown-RNA-seq-protocol.tex
@@ -743,13 +743,12 @@ The results from the differential analysis were saved as R-objects. These are im
 \hypertarget{visualisations}{%
 \section{Visualisations}\label{visualisations}}
 
-There are a number of ways in which you can visualise your RNA-seq data, while in this chapter we attempt to cover the most commonly ways of visualising your RNA-seq data, this is by no means exhaustive.
+There are a number of ways in which you can visualise the results from the differential expression analysis, while in this chapter we attempt to cover the most common ways of visualising the data, they are by no means exhaustive.
 
 \hypertarget{heatmaps}{%
 \subsection{Heatmaps}\label{heatmaps}}
 
-Heatmaps are a great way of demonstrating the differences in the expression patterns between different conditions in your dataset. Here we use the \emph{coolmap} function within the \textbf{limma}
-package which is an extension of the \emph{heatmap.2} function within the \textbf{gplots} package. The heatmap below shows the expression pattern of the top 100 differentially expressed genes between CIS vs WT.
+Heatmaps are a great way of demonstrating the differences in the expression patterns between different conditions in your dataset. Here we use the \emph{coolmap} function within the \textbf{limma} package which is an extension of the \emph{heatmap.2} function within the \textbf{gplots} package. The heatmap below shows the expression pattern of the top 100 differentially expressed genes between CIS vs WT.
 
 \begin{Shaded}
 \begin{Highlighting}[]
