--- a/docs/bookdown-RNA-seq-protocol.tex
+++ b/docs/bookdown-RNA-seq-protocol.tex
@@ -118,7 +118,7 @@
 
 \title{An RNA-seq Data Analysis Protocol}
 \author{David Chisanga and Wei Shi}
-\date{2021-02-22}
+\date{2021-02-23}
 
 \begin{document}
 \maketitle
@@ -730,7 +730,7 @@ In this chapter we will run through a series of example downstream analyses that
 \hypertarget{load-previous-results}{%
 \section{Load previous results}\label{load-previous-results}}
 
-The results from the differential analysis were saved as R-objects. These are imported below and used for the rest of the analysis
+Previous results from the differential expression analysis were saved in the ``Worksho\_RNAseq'' directory on All staff share as an R-object ``Counts2.RData''. Import this into R to run the rest of the analysis
 
 \begin{Shaded}
 \begin{Highlighting}[]
